Fixed: Misaligned URI and header entry boxes
Fixes #337.

--- a/src/scss/red_request.scss
+++ b/src/scss/red_request.scss
@@ -81,4 +81,5 @@ option[value="other..."] {
 
 @media only screen and (max-device-width : 1024px) {
   .req_hdr, .add_req_hdr { width: 100%; }
+  input#uri { width: calc(100% - 40px);}
 }
